clean tests / zero impedance not applicable anymore
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>